Ajout des blocks de Content Creator + Correction paillasse